@@ -2,6 +2,7 @@
 - Improved USE_TRANSLATABLE_FIELDS
 - Option to allow empty runtimes (without even a start date)
 - SlugTreeMixin: Check `has_url` and `parent` fields, too
+- PageTitlesMixin: Renamed `short_title`-field to `name`
 
 0.2.12 2018-09-28
 - Additional text template tags.
